--- a/Website/views/index.erb
+++ b/Website/views/index.erb
@@ -1,68 +1,23 @@
-style = {
-    background-color: 1736FF;
-    color: FF08E7;
-}
+<!DOCTYPE html>
+<html>
+  <body>
+      <header><h1>"SOW What" Quizzes</h1></header>
+   <h2>
+      <ul>
+       <li>Animal Quiz<link href=" " /> </li> 
+       <br>
+      <li>Funny Quiz<link hred=" " /> </li>
+     </ul>
+     </h2>
+     <div class = "homebackground1"></div>
+     <div class = "homebackground2"></div>
+     <div class = "homebackground3"></div>
+     <div class = "homebackground4"></div>
+     <div class = "homebackground5"></div>
+     <div class = "homebackground6"></div>
+     <div class = "homebackground7"></div>
+     <div class = "homebackground8"></div>
+  </body>
+  
+</html>
 
-.homebackground1 {
-    background-image: url("https://www.askideas.com/media/39/Rabbit-Showing-Tongue-Closeup-Face-Funny-Image.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground2 {
-    background-image: url("https://www.hdwallpaper.nu/wp-content/uploads/2015/02/maxresdefault-1024x708.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground3 {
-    background-image: url("https://www.askideas.com/media/13/Funny-Duck-Dancing-Picture.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground4 {
-    background-image: url("https://www.askideas.com/media/10/Funny-Lion-With-Rabbit-Face.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground5 {
-    background-image: url("https://www.bestfunnies.com/wp-content/uploads/2012/01/Funny-and-Cute-Mouses-Funny-Mouse-Picture-021-FunnyPica.com_.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground6 {
-    background-image: url("https://www.askideas.com/media/40/Wolf-Funny-Faces-Picture.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground7 {
-    background-image: url("7032825-green-frog-funny.jpg");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
-
-.homebackground8 {
-    background-image: url("https://media.gettyimages.com/photos/who-is-the-boss-picture-id480585465");
-    position: relative;
-    left: ;
-    top: ;
-    
-}
